--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
+    <div id="toasts"></div>
     <section class="mobile">
       <div id="toastBox"></div>
       <div class="bar_icon" id="bar_icon" onclick="onclickOpen(this)">
@@ -36,7 +37,12 @@
           <li><a href="#">Giới thiệu</a></li>
           <li><a href="#hangDT">Hãng điện thoại</a></li>
           <li><a href="#">Hệ thống siêu thị</a></li>
-          <li><a href="gioHang.html">Giỏ Hàng</a></li>
+          <li>
+            <div class="total_display">
+              <a href="gioHang.html">Giỏ Hàng</a>
+              <div class="total_soLuong">0</div>
+            </div>
+          </li>
 
           <li><a href="FormLogin.html">Đăng nhập</a></li>
         </ul>
@@ -249,7 +255,12 @@
                 /></a>
                 <a href="#"><img src="image/imgLogo/instagram.png" alt="" /></a>
                 <a href="#"><img src="image/imgLogo/tiktok.png" alt="" /></a>
-                <a href="#"><img src="image/imgLogo/zalo.png" alt="" /></a>
+                <a href="#"
+                  ><img
+                    src="image/imgLogo/zalo.png"
+                    alt=""
+                    onclick="soLuongGioHang()"
+                /></a>
               </div>
             </div>
           </div>
@@ -302,8 +313,18 @@
           var itemGioHang = taoDoiTuongItemGioHang(idSanPham, 1);
           danhSachItemGioHang.push(itemGioHang);
         }
+        tongSl();
         // lưu trữ xuống localstorage
+        // soLuongGioHang();
         luuGioHangVaoLocalStorage(danhSachItemGioHang);
+      }
+      function tongSl() {
+        var danhSachItemGioHang = layGioHangTuLocalStorage();
+        let tong = 0;
+        for (let i = 0; i < danhSachItemGioHang.length; i++) {
+          const element = danhSachItemGioHang[i].soLuong;
+          console.log(element);
+        }
       }
       var userr = new Object();
       function searchDanhSachSanPham() {
