--- a/gioHang.html
+++ b/gioHang.html
@@ -35,7 +35,7 @@
           <li>
             <div class="total_display">
               <a href="gioHang.html">Giỏ Hàng</a>
-              <div class="total_soLuong">0</div>
+              <div class="total_soLuong">"(0)"</div>
             </div>
           </li>
           <li><a href="FormLogin.html">Đăng nhập</a></li>
@@ -169,7 +169,8 @@
 
     <script>
       hienThiDanhSachItemGioHang();
-
+      tongSl();
+      tongDonHang();
       function hienThiDanhSachItemGioHang() {
         var danhSachItemGioHang = layGioHangTuLocalStorage();
         console.log(danhSachItemGioHang);
@@ -177,7 +178,6 @@
 
         var nodeGioHang = document.getElementById("main");
         nodeGioHang.innerHTML = HTML;
-        tongDonHang();
       }
 
       function chuyenDanhSachItemGioHangSangHTML(danhSachItemGioHang) {
@@ -195,7 +195,13 @@
         console.log(itemGioHang.idSanPham);
 
         var giaHienTai = itemGioHang.soLuong * sanPham.giaGoc;
-
+        console.log(giaHienTai);
+        var tog = 0;
+        for (var i = 0; i < sanPham.length; i++) {
+          var element = sanPham[i];
+          // tong = +element;
+          console.log(element);
+        }
         var html =
           ' <div class="items">\n' +
           '              <div class="itemImages">\n' +
@@ -227,7 +233,6 @@
 
         return html;
       }
-
       function xoaItemGioHang(layID) {
         var sanPham = LayDanhSachItemGioHangDuoiLocalStorage();
 
@@ -241,10 +246,12 @@
         }
         // soLuongGioHang();
         luuGioHangVaoLocalStorage(sanPham);
-
         hienThiDanhSachItemGioHang();
+        tongDonHang();
+        tongSl();
       }
 
+      // tongGioHang();
       function tongDonHang() {
         var gioHang = document.getElementById("main");
         var tr = gioHang.children;
